--- a/index.ipynb
+++ b/index.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -15,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -29,17 +27,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -220,7 +218,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -335,17 +333,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training r^2: 0.823908907201\n",
-      "Testing r^2: 0.785239568446\n",
-      "Training MSE: 1083602888.48\n",
-      "Testing MSE: 1448610037.61\n"
+      "Training r^2: 0.8102041039907836\n",
+      "Testing r^2: 0.7991423571024632\n",
+      "Training MSE: 1158410878.8121989\n",
+      "Testing MSE: 1386301388.2296667\n"
      ]
     }
    ],
@@ -391,17 +389,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training r^2: 0.800636556693\n",
-      "Testing r^2: 0.853560391708\n",
-      "Training MSE: 1342224346.23\n",
-      "Testing MSE: 736512635.577\n"
+      "Training r^2: 0.8776960377878426\n",
+      "Testing r^2: 0.5536212648365626\n",
+      "Training MSE: 702851956.0289488\n",
+      "Testing MSE: 3562391014.592903\n"
      ]
     }
    ],
@@ -432,24 +430,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -644,7 +642,7 @@
        "[5 rows x 290 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,17 +654,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training r^2: 0.934139831372\n",
-      "Testing r^2: -2.03880441798e+26\n",
-      "Training MSE: 412016810.023\n",
-      "Testing MSE: 1.31683626299e+36\n"
+      "Training r^2: 0.9381099374827792\n",
+      "Testing r^2: -3.289206921758238e+20\n",
+      "Training MSE: 390000230.17808217\n",
+      "Testing MSE: 2.0786209427272532e+30\n"
      ]
     }
    ],
@@ -770,10 +768,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.linear_model import Lasso, Ridge"
@@ -781,17 +777,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training r^2: 0.941150558085\n",
-      "Testing r^2: 0.647003659993\n",
-      "Training MSE: 368158172.604\n",
-      "Testing MSE: 2279955728.58\n"
+      "Training r^2: 0.9380661402111079\n",
+      "Testing r^2: 0.8663074689827015\n",
+      "Training MSE: 390276218.6863864\n",
+      "Testing MSE: 844872643.9813669\n"
      ]
     }
    ],
@@ -813,17 +809,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training r^2: 0.940744502048\n",
-      "Testing r^2: 0.65690522635\n",
-      "Training MSE: 370698432.016\n",
-      "Testing MSE: 2216002847.54\n"
+      "Training r^2: 0.9376315003020154\n",
+      "Testing r^2: 0.8717072492761697\n",
+      "Training MSE: 393015102.0821418\n",
+      "Testing MSE: 810748623.5985776\n"
      ]
     }
    ],
@@ -847,12 +843,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training r^2: 0.9376315003020154\n",
+      "Testing r^2: 0.8717072492761697\n",
+      "Training MSE: 393015102.0821418\n",
+      "Testing MSE: 810748623.5985776\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
+    "L1 = Lasso(alpha=5) #Lasso is also known as the L1 norm.\n",
+    "L1.fit(X_train, y_train)\n",
+    "print('Training r^2:', L1.score(X_train, y_train))\n",
+    "print('Testing r^2:', L1.score(X_test, y_test))\n",
+    "print('Training MSE:', mean_squared_error(y_train, L1.predict(X_train)))\n",
+    "print('Testing MSE:', mean_squared_error(y_test, L1.predict(X_test)))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "# Your code here"
    ]
   },
@@ -873,6 +889,21 @@
    },
    "outputs": [],
    "source": [
+    "\n",
+    "from sklearn.linear_model import Ridge\n",
+    "def ridge_regression(data, predictors, alpha, models_to_plot={}):\n",
+    "    #Fit the model\n",
+    "    ridgereg = Ridge(alpha=alpha,normalize=True)\n",
+    "    ridgereg.fit(data[predictors],data['y'])\n",
+    "    y_pred = ridgereg.predict(data[predictors])\n",
+    "\n",
+    "\n",
+    "L1 = max_iterations(alpha=5) #Lasso is also known as the L1 norm.\n",
+    "L1.fit(X_train, y_train)\n",
+    "print('Training r^2:', L1.score(X_train, y_train))\n",
+    "print('Testing r^2:', L1.score(X_test, y_test))\n",
+    "print('Training MSE:', mean_squared_error(y_train, L1.predict(X_train)))\n",
+    "print('Testing MSE:', mean_squared_error(y_test, L1.predict(X_test)))\n",
     "#Your code here"
    ]
   },
@@ -904,7 +935,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
