--- a/index.ipynb
+++ b/index.ipynb
@@ -859,7 +859,7 @@
    ],
    "source": [
     "\n",
-    "L2 = Ridge() # is also known as the L1 norm.\n",
+    "L2 = Ridge() #Ridge is also known as the L1 norm.\n",
     "L2.fit(X_train, y_train)\n",
     "print('Training r^2:', L1.score(X_train, y_train))\n",
     "print('Testing r^2:', L1.score(X_test, y_test))\n",
